# eigen-pybind

./: CMakeLists.txt  README.md  pyproject.toml
scripts/: test  test.py
src/cpp/: add_eigen.hpp
